Solved title alignment issue, added grad school items

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 img{
-    width: 18%;
+    width: 8rem;
     float: right;
 }
 img:hover{
-    width:18%;
+    width:8rem;
     float: right;
     transform: rotate(180deg)
 }
@@ -30,12 +30,13 @@ h3.thinItalic{
     font-weight: 1;
 }
 .container{
-    width: 70%;
-    padding-left: 15%;
+    width: 80%;
+    padding-left: 10%;
     margin-top: 100px;
 }
 .heading{
-    padding-left: 35%;
+    padding-left: 8rem;
+    text-align: center;
 }
 .rightSide{
     float: right;
